--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,21 @@ form {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.slidecontainer {
+    height: 20vh;
+    background: lightblue;
+    margin: 5%;
+    padding: 15% ; 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    
+}
+
+.content {
+    display: flex;
+    flex-direction: column;    
+    justify-content: center;    
+}
+
+
+
+
