--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,9 @@
+h1 {
+    margin-top: 100px;
+}
+
 form {
-    margin: 5% auto;
+    margin: 2% auto;
     padding: 2%;
     line-height: 2rem;
     font-family: Arial, Helvetica, sans-serif;
